--- a/src/components/home.module.css
+++ b/src/components/home.module.css
@@ -1,12 +1,13 @@
 
+
 .homegrid {
     position: relative;
     scroll-snap-type: mandatory;
-    overflow-y: scroll;
+    height: 100vh; /* Full viewport height */
+    overflow-y: scroll; /* Enable vertical scrolling */
     scroll-snap-type: y mandatory;
     scrollbar-width: none;
 }
-
 
 
 
